2007-04-18  Gert Driesen  <drieseng@users.sourceforge.net>

	* monoresgen.cs: Clean up resources when resource file cannot be
	compiled.

2007-04-18  Gert Driesen  <drieseng@users.sourceforge.net>

	* monoresgen.cs: Added support for 4 digit unicode escapes on 2.0
	profile. Patch provided by Alex Earl. Fixes bug #81136.

2007-04-15  Marek Safar  <marek.safar@gmail.com>

	* monoresgen.cs: Use invariant ToLower.

2007-02-16  Gert Driesen  <drieseng@users.sourceforge.net>

	* monoresgen.cs: Added support for /useSourcePath option (2.0 only).
	Fixes bug #80571. Update usage instructions. When Exception is 
	TargetInvocationException, and an InnerException is available then use 
	that one instead. Support absolute filenames for resource files.

2006-05-02  Robert Jordan  <robertj@gmx.net>

	* monoresgen.cs (TxtResourceReader/Writer): Support escapes
	(\n, \r, \t, \\) in input and output. Fixes bug #78270 and
	an internal TODO.

2006-04-11  Gert Driesen  <gert.driesen@telenet.be>
	    Raja R Harinath  <rharinath@novell.com>

	* Makefile (PROGRAM): Make profile-specific.
	(PROGRAM_COMPILE): Don't set.
	(CLEAN_FILES): Add 'resgen.exe'.

2005-01-13 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* monoresgen.cs: s/monoresgen/resgen/. Open the destination file with
	FileMode.Create. Fixes bug #52105.

2004-06-05  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* monoresgen.cs: fixed format exception in the po reader.

2004-05-20  Raja R Harinath  <rharinath@novell.com>

	* Makefile (PROGRAM_COMPILE): Define to $(BOOT_COMPILE).

2004-05-09  Gert Driesen <drieseng@users.sourceforge.net>

	* monoresgen.cs : use Assembly.Load with fullly qualified assembly
	name for loading swf assembly
	* monoresgen.exe.sources : added AssemblyInfo.cs, Consts.cs,
	Locale.cs

2004-03-22  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* monoresgen.cs:  don't create the output file on error reading the
	input. Fixes bug #55916.

2004-01-12  Miguel de Icaza  <miguel@ximian.com>
